--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilo.css" type="text/css">
     <title>Document</title>
 </head>
 <body>
@@ -12,5 +13,10 @@
     
     <p>Este es el primer parrafo</p>
 
+    <input type="button" onclick="saludo()" value="Saludo">
+
+    
+
+    <script src="js/js1.js"></script>
 </body>
 </html>
